Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36154

examples/multimedia/audiorecorder example does not work on Linux (kubuntu)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.0 Beta, 5.4.0
    • 5.2.0
    • Multimedia
    • None
    • kubuntu linux x64 w/ pulseaudio
    • 5c30ed55ef41ea85232f63c7ee4fd52a4e7126e2

      Trying to record something with the audiorecorder example on
      kubuntu.

      Depending on what codec I am using, it seems I get different errors. For example, if I use
      the audio codec audio/vorbis and file container ogg, I get
      "Failed to build media capture pipeline."

      but if I use audio/mpeg and mp4, and try to save to test.mp4, I get
      "Could not open file "file:///home/ezust/tmp/test.mp4" for writing."

      Likewise, if I use PCM as my codec and .wav as my container and
      try to save to test.wav, I get the same "could not open file" error.

      Interestingly, I get a different error message "could not get/set settings from/on device" from the Ubuntu build of qt 5.1's audiorecorder example.

      I can not reproduce this issue on windows.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ylopes Yoann Lopes
            ezustics Alan Ezust
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes